# TrajectoryAligner

./: .gitignore  CMakeLists.txt  README.md
TrajectoryAligner/: CMakeLists.txt  TrajectoryAligner.py
TrajectoryAligner/Resources/Icons/: Thumbs.db
TrajectoryAligner/Resources/UI/: TrajectoryAligner.ui
